--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -10224,12 +10224,12 @@ Now imagine that we are interested in studying the random sampling process. Spec
 \hypertarget{population-whats-in-a-name}{%
 \section{Population: What's in a name}\label{population-whats-in-a-name}}
 
-Typically, in psychology, when we use the word ``population'' we are referring to a population of people - such as those illustrated in Figure \ref{fig:chdeepfigure1}A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure \ref{fig:chdeepfigure1}A as a population to \textbf{also} thinking of the distribution of sample mean in Figure \ref{fig:chdeepfigure1}B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
+Typically, in psychology, when we use the word ``population'' we are referring to a population of people - such as those illustrated in Figure \ref{fig:chdeepfigure1}A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure \ref{fig:chdeepfigure1}A as a population to \textbf{also} thinking of the distribution of sample means in Figure \ref{fig:chdeepfigure1}B as a population. Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA).
 
 \hypertarget{sample-means-in-context}{%
 \subsection{Sample means in context}\label{sample-means-in-context}}
 
-Thinking of the distribution of sample mean as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word ``population''. Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure \ref{fig:chdeepfigure1}A), we use \(N\) to indicate the number people in the population and \(n\) to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure \ref{fig:chdeepfigure1}B), we use \(A\) to indicate the number sample means in the population and \(a\) to refer to the number of sample means in a subset of the population.
+Thinking of the distribution of sample means as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word ``population''. Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure \ref{fig:chdeepfigure1}A), we use \(N\) to indicate the number people in the population and \(n\) to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure \ref{fig:chdeepfigure1}B), we use \(A\) to indicate the number sample means in the population and \(a\) to refer to the number of sample means in a subset of the population.
 
 Consider a concrete example. When we obtain a sample of people (\(n\) = 5) we can think those people as being subset of the population of people (\(N\)=100,000), see Figure \ref{fig:chdeepfigure1}A. If we calculate a sample mean (\(\bar{x}\)) based on those 5 people we can think of that single sample mean (\(a\) = 1) a being subset of a population of sample means (\(A = \infty\)), see Figure \ref{fig:chdeepfigure1}B. Alternatively, imagine we obtained three samples from the population of people, Figure \ref{fig:chdeepfigure1}A, each composed of 5 people (\(n\) = 5 for each sample). Then we calculated the sample mean (\(\bar{x}\)) for each of the three samples. We could think of those three sample means (\(a\) = 3) as being a subset of a population of sample means (\(A = \infty\)), see Figure \ref{fig:chdeepfigure1}B.
 
@@ -10245,7 +10245,7 @@ Because we are thinking of the distribution of sample means as a population we c
 
 Using Equation \eqref{eq:popmeanxbardeep} we find that the mean of the sample means is 172.50 cm (i.e., \(\mu_{\bar{x}} = 172.50\)).
 
-A key point to remember is that the mean of the sample means, \(\mu_{\bar{x}}\), will always be the same as that of the people's heights, \(\mu_{people}\). Consequently, any conclusions we make about \emph{population means} based on Figure \ref{fig:chdeepfigure1}B (i.e., \(\mu_{\bar{x}}\)) will also apply to Figure \ref{fig:chdeepfigure1}A (i.e., \(\mu_{people}\)). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., \(\mu_{people}\)) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample mean in Figure \ref{fig:chdeepfigure1}B (i.e., \(\mu_{\bar{x}}\)).
+A key point to remember is that the mean of the sample means, \(\mu_{\bar{x}}\), will always be the same as that of the people's heights, \(\mu_{people}\). Consequently, any conclusions we make about \emph{population means} based on Figure \ref{fig:chdeepfigure1}B (i.e., \(\mu_{\bar{x}}\)) will also apply to Figure \ref{fig:chdeepfigure1}A (i.e., \(\mu_{people}\)). This is a crucial point to keep in mind as we proceed through this chapter. Although we are ultimately interested in making conclusion about the mean of the people (i.e., \(\mu_{people}\)) - all our work in this chapter (and in ANOVA) is based on the mean of distribution of sample means in Figure \ref{fig:chdeepfigure1}B (i.e., \(\mu_{\bar{x}}\)).
 
 \hypertarget{sample-mean-distribution-variance}{%
 \section{Sample mean distribution variance}\label{sample-mean-distribution-variance}}
@@ -10361,7 +10361,7 @@ Sample Number & Sample size (\(n\)) & Mean (\(\bar{x} = \frac{\Sigma x_i}{n}\)) 
 \hypertarget{method-1-estimate-the-variance-of-infinite-sample-means-using-3-sample-means}{%
 \subsection{Method 1: Estimate the variance of infinite sample means using 3 sample means}\label{method-1-estimate-the-variance-of-infinite-sample-means-using-3-sample-means}}
 
-We can use the sample means presented in the table above to estimate the variance of the distribution of sample mean as illustrated in the formula below. Recall, we use the lower case ``\(a\)'' to represent the number of sample means (in the case because we have 3 sample means \(a = 3\)).
+We can use the sample means presented in the table above to estimate the variance of the distribution of sample means as illustrated in the formula below. Recall, we use the lower case ``\(a\)'' to represent the number of sample means (in the case because we have 3 sample means \(a = 3\)).
 
 \begin{equation} 
 s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}
@@ -10510,8 +10510,8 @@ Distribution & Attribute & Parameter Calculation & Estimate of Parameter \\
 \midrule
 \endhead
 People & Mean & \(\mu_{people} = \frac{\sum_{i=1}^{N}{X_i}}{N}\) & \(\bar{x}_{people} = M = \frac{\sum_{i=1}^{n}{x_i}}{n}\) \\
-People & Variance & \(\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \bar{X})^2}}{N}\) & \(s_{people}^2 = VAR = \frac{\sum_{i=1}^{n}{(x_i - \bar{x})^2}}{n-1}\) \\
-People & Standard Deviation & \(\sigma_{people} = \sqrt{\frac{\sum_{i=1}^{N}{(X_i - \bar{X})^2}}{N}}\) & \(s_{people} = SD = \sqrt{\frac{\sum_{i=1}^{n}{(x_i - \bar{x})^2}}{n-1}}\) \\
+People & Variance & \(\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}\) & \(s_{people}^2 = VAR = \frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}\) \\
+People & Standard Deviation & \(\sigma_{people} = \sqrt{\frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}}\) & \(s_{people} = SD = \sqrt{\frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}}\) \\
 Sample Means & Mean & \(\mu_{\bar{x}} = \frac{\sum_{i=1}^{A=\infty}{\bar{x}_i}}{A}\) & \(\bar{\bar{x}} = \frac{\sum_{i=1}^{a}{\bar{x}_i}}{a}\) \\
 Sample Means & Method 1: Variance & \(\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{A}\) & \(s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\) \\
 Sample Means & Method 2 CLT: Variance & \(\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}\) & \(s_{\bar{x}}^2 = \frac{s_{people}^2}{n}\) \\
