--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -197,7 +197,7 @@ If you inspect the Files pane on the right of the screen you see the  **data_okc
 
 Once your command looks like the one below select the text and click on the "Run" button.
 
-Note: If you are not in the class, the data file is available from: https://github.com/dstanley4/psyc6060bookdown
+Note: If you are not in the class, the data file is available here: [data_okcupid.csv](data_okcupid.csv)
 
 
 ```{r firstread}
